# db-write-performance-benchmark

./: .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  mypy.sh  pyproject.toml  requirements.txt
db_write_performance_benchmark/: benchmark.py
db_write_performance_benchmark/01_prep/: repartition_data.py
db_write_performance_benchmark/02_write/: write_clickhouse_spark.py  write_postgres_polars.py
db_write_performance_benchmark/02_write_postgres/: write_postgres_pandas.py  write_postgres_pandas.py.bak  write_postgres_polars.py  write_postgres_spark.py
db_write_performance_benchmark/03_visualize/: visualize_results.py
db_write_performance_benchmark/03_visualize_results/: visualize_results.py
db_write_performance_benchmark/model/: experiment.py
db_write_performance_benchmark/utils/: log.py  log_writer.py
scripts/: run.sh
